# TriviumDB

./: .gitignore  Cargo.toml  README.md  package.json  pyproject.toml  triviumdb.d.ts
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
docs/: api-reference.md  best-practices.md  features.md  fix-priority-checklist.md
scripts/: test_custom_id.py
src/: database.rs  filter.rs  lib.rs  main.rs  nodejs.rs  python.rs  vector.rs
src/graph/: traversal.rs
src/index/: bq.rs  brute_force.rs  hnsw.rs  mod.rs  text.rs
src/query/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs
src/storage/: compaction.rs  file_format.rs  memtable.rs  mod.rs  vec_pool.rs  wal.rs
tests/: query.rs
