[package]
name = "triviumdb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hnsw = ["dep:instant-distance"]
python = ["dep:pyo3"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"
rayon = "1.10"
memmap2 = "0.9"
instant-distance = { version = "0.6", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
half = { version = "2.7.1", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
crc32fast = "1.5.0"
fs2 = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
