[package]
name = "triviumdb"
version = "0.4.4"
edition = "2024"
authors = ["YoKONCy <2752026184@qq.com>"]
description = "A high-performance memory-mmap hybrid search engine built for AI, combining dense vector, sparse text, graph relations, and JSON metadata."
repository = "https://github.com/YoKONCy/TriviumDB"
license = "MIT OR Apache-2.0"
keywords = ["vector-database", "graph-database", "hybrid-search", "rag", "mmap"]
categories = ["database", "data-structures", "algorithms"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hnsw = ["dep:instant-distance"]
python = ["dep:pyo3"]
nodejs = ["dep:napi", "dep:napi-derive"]
cli = [] # 仅供终端工具使用

[[bin]]
name = "triviumdb"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"
rayon = "1.10"
memmap2 = "0.9"
instant-distance = { version = "0.6", optional = true }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }
napi = { version = "2", features = ["napi8", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
half = { version = "2.7.1", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
crc32fast = "1.5.0"
fs2 = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
aho-corasick = "1.1.4"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
